# fastapi-cbv

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fastapi_cbv_router/: __init__.py  cbv.py
tests/: test_cbv.py
