[project]
name = "fastapi-cbv-router"
version = "0.1.0"
description = "Class-based views for FastAPI routers — a maintained, FastAPI 0.137+ compatible drop-in for fastapi_utils.cbv."
authors = [{ name = "Vladimir Klychnikov" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["fastapi", "cbv", "class-based-views", "router", "dependency-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
]

[project.urls]
Homepage = "https://github.com/Chelovek760/fastapi-cbv"
Repository = "https://github.com/Chelovek760/fastapi-cbv"
Issues = "https://github.com/Chelovek760/fastapi-cbv/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.27",
    "ruff>=0.14",
    "mypy>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_cbv_router"]

[tool.hatch.build.targets.sdist]
include = ["src/**/*.py", "src/**/py.typed"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
output-format = "grouped"

lint.task-tags = ["TODO"]

lint.select = [
    "E", "W", "F", "I", "D", "UP", "N", "YTT", "ANN", "S", "BLE", "FBT",
    "B", "A", "C4", "T10", "EM", "ISC", "ICN", "T20", "PT", "Q", "RET",
    "SIM", "TID", "DTZ", "ERA", "PD", "PGH",
    "PLC", "PLE", "PLR", "PLW", "PIE", "RUF",
]
lint.ignore = [
    "PLR0913", "ERA001", "ANN204", "C408", "B008", "RUF012",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D212", "ANN401", "ICN001", "UP035", "BLE001", "S608",
    "PLC1901", "S311", "S603", "S602", "S301", "A003", "D415",
]

lint.fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
combine-as-imports = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
